--- a/About_the_band.html
+++ b/About_the_band.html
@@ -100,11 +100,11 @@ img
 <section>
   <nav>
     <ul>
-      <li><a href="#">Home page</a></li>
-      <li><a href="#">About the Band</a></li>
-      <li><a href="#">Top Albums</a></li>
-      <li><a href="#">Media</a></li>
-      <li><a href="#">Tour</a></li>
+      <li><a href="index.html">Home page</a></li>
+      <li><a href="about_the_band.html">About the Band</a></li>
+      <li><a href="top_albums.html">Top Albums</a></li>
+      <li><a href="media.html">Media</a></li>
+      <li><a href="tour.html">Tour</a></li>
     </ul>
 <img src=https://pbs.twimg.com/profile_images/788538317692252161/-zLZJtY5_400x400.jpg height=100 width=100 />
  </nav>
