--- a/Top_albums.html
+++ b/Top_albums.html
@@ -113,7 +113,7 @@ ol {
       <li><a href="index.html">Home page</a></li>
       <li><a href="about-the_band.html">About the Band</a></li>
       <li><a href="top_albums.html">Top Albums</a></li>
-      <li><a href="meida.html">Media</a></li>
+      <li><a href="media.html">Media</a></li>
       <li><a href="tour.html">Tour</a></li>
     </ul>
 <img src=https://pbs.twimg.com/profile_images/788538317692252161/-zLZJtY5_400x400.jpg height=100 width=100 />
