--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ ol {
   <nav>
     <ul>
       <li><a href="index.html">Home page</a></li>
-      <li><a href="about_the_band">About the Band</a></li>
-      <li><a href="top_albums">Top Albums</a></li>
+      <li><a href="About_the_band.html">About the Band</a></li>
+      <li><a href="Top_albums.html">Top Albums</a></li>
       <li><a href="media.html">Media</a></li>
       <li><a href="tour.html">Tour</a></li>
     </ul>
